--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,7 +58,8 @@
     <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
     <string name="cancel">Cancel</string>
 
-    <string name="unknown_price">Unknown price</string>
+    <string name="unknown_price">Unknown Price</string>
+    <string name="unknown_quantity">Unknown Quantity</string>
 
     <string name="plus_button">add one</string>
     <string name="minus_button">deduct one</string>
